--- a/nodeserver/nginx.conf
+++ b/nodeserver/nginx.conf
@@ -1,7 +1,7 @@
 server {
-    listen 80;
-    server_name example.com www.example.com;
-    root /Users/Jang/Git/taskplatform/task;
+    listen 8889;
+    server_name  47.99.65.56;
+    root /home/www/taoqibao/nodeserver;
     
     set $node_port 8360;
 
