--- a/nodeserver/package.json
+++ b/nodeserver/package.json
@@ -14,6 +14,7 @@
     "jsonwebtoken": "^8.1.0",
     "koa-cors": "0.0.16",
     "lodash": "^4.17.11",
+    "qiniu": "^7.2.1",
     "think-cache": "^1.0.0",
     "think-cache-file": "^1.0.8",
     "think-logger3": "^1.0.0",
